<resources>
    <string name="app_name">Booking Application</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="go_to_register">Create an account first</string>
    <string name="find_password">find password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_go_to_register">Go to Register</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_booking">Book seats</string>
    <string name="navigation_report">Report</string>
    <string name="navigation_user">User</string>
    <string name="navigation_seat">Seat</string>
    <string name="search_hint">Please Enter User Name</string>


    <string-array name="list">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
    </string-array>>
    <string name="history">history</string>
    <string name="problem_report_date">Date</string>
    <string name="problem_report_time">Time</string>
    <string name="problem_report_place">Place</string>
    <string name="problem_report_seat">Seat</string>
    <string name="problem_report_photo">Photo</string>
    <string name="problem_report_submit">Submit</string>
    <string name="problem_report_description">Description</string>
</resources>
