<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_problem_report"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/problem_report_chosen_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="Choose date"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/problem_report_date"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_problem_report" />

    <TextView
        android:id="@+id/problem_report_chosen_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:text="Choose time"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBaseline_toBaselineOf="@+id/problem_report_chosen_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/problem_report_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/problem_report_place"
        app:layout_constraintBaseline_toBaselineOf="@+id/problem_report_chosen_place"
        app:layout_constraintStart_toStartOf="@+id/problem_report_date" />

    <TextView
        android:id="@+id/problem_report_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/problem_report_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/problem_report_chosen_time"
        app:layout_constraintEnd_toStartOf="@+id/problem_report_chosen_time" />

    <TextView
        android:id="@+id/problem_report_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/problem_report_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/problem_report_chosen_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/problem_report_chosen_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Choose place"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/problem_report_chosen_date"
        app:layout_constraintTop_toBottomOf="@+id/problem_report_chosen_date" />

    <TextView
        android:id="@+id/problem_report_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/problem_report_seat"
        app:layout_constraintBaseline_toBaselineOf="@+id/problem_report_chosen_place"
        app:layout_constraintStart_toStartOf="@+id/problem_report_time" />

    <TextView
        android:id="@+id/problem_report_photo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/problem_report_photo"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_submit_photo"
        app:layout_constraintStart_toStartOf="@+id/problem_report_place" />

    <Button
        android:id="@+id/button_submit_photo"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="submit photo"
        android:textColor="@color/textSecondary"
        app:layout_constraintStart_toStartOf="@+id/problem_report_chosen_seat"
        app:layout_constraintTop_toBottomOf="@+id/problem_report_chosen_seat" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/problem_report_submit"
        android:textColor="@color/textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_report_add_description" />

    <ProgressBar
        android:id="@+id/progress_bar_photo"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_photo" />

    <ImageView
        android:id="@+id/image_view_photo"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_report_photo" />

    <TextView
        android:id="@+id/problem_report_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/problem_report_description"
        app:layout_constraintStart_toStartOf="@+id/problem_report_photo"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_photo" />

    <EditText
        android:id="@+id/problem_report_add_description"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_background"
        android:ems="10"
        android:gravity="start|top|left"
        android:hint="Add description"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/image_view_photo"
        app:layout_constraintStart_toStartOf="@+id/image_view_photo"
        app:layout_constraintTop_toBottomOf="@+id/problem_report_description" />

    <EditText
        android:id="@+id/problem_report_chosen_seat"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/border_background"
        android:ems="10"
        android:hint="Choose seat"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/problem_report_seat"
        app:layout_constraintStart_toStartOf="@+id/problem_report_chosen_time" />

</androidx.constraintlayout.widget.ConstraintLayout>